fix support jdk21